<resources>
    <string name="app_name">Github User</string>
    <string name="user_photo">User Photo</string>
    <string name="text_name">Name</string>
    <string name="text_username">Username</string>
    <string name="text_company">Company</string>
    <string name="text_location">Location</string>
    <string name="text_repository">Repository</string>
    <string name="text_followers">Follower</string>
    <string name="text_following">Following</string>
    <string name="text_share">Share</string>
    <string name="text_github_logo">Github Logo</string>
    <string name="placeholder_name">Homer Simpsons</string>
    <string name="placeholder_login">hsimpsons</string>
    <string name="placeholder_company">Nuclear Power Plant</string>
    <string name="placeholder_location">Springfield</string>
    <string name="placeholder_repository">8</string>
    <string name="placeholder_followers">666</string>
    <string name="placeholder_following">99</string>
    <string name="search">Search</string>

    <string-array name="login">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar_url">
        <item>https://avatars0.githubusercontent.com/u/1?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/2?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/3?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/4?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/5?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/6?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/7?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/17?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/18?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/19?v=4</item>
    </string-array>

    <string-array name="url">
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
        <item>https://api.github.com/users/mojombo</item>
    </string-array>

    <string-array name="followers_url">
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
        <item>https://api.github.com/users/mojombo/followers</item>
    </string-array>

    <string-array name="following_url">
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
        <item>https://api.github.com/users/mojombo/following</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Masukkan kata</string>
</resources>