<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_avatar"
            tools:src="@tools:sample/avatars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_photo"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_item_name"
            tools:text="@string/placeholder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="32sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_weight="3"
                    android:text="@string/text_username" />

                <TextView
                    android:id="@+id/tv_item_login"
                    tools:text="@string/placeholder_login"
                    android:layout_weight="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_weight="3"
                    android:text="@string/text_company" />

                <TextView
                    android:id="@+id/tv_item_company"
                    tools:text="@string/placeholder_company"
                    android:layout_weight="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_weight="3"
                    android:text="@string/text_location" />

                <TextView
                    android:id="@+id/tv_item_location"
                    tools:text="@string/placeholder_location"
                    android:layout_weight="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_weight="3"
                    android:text="@string/text_repository" />

                <TextView
                    android:id="@+id/tv_item_repository"
                    tools:text="@string/placeholder_repository"
                    android:layout_weight="7" />
            </TableRow>
        </TableLayout>

        <ProgressBar
            android:id="@+id/progressBarDetails"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>